--- a/website/_quarto.yml
+++ b/website/_quarto.yml
@@ -2,12 +2,13 @@ project:
   type: website
 
 website:
-  title: "Website"
+  title: "Natural Bridges, Leave No Trace"
   navbar:
     left:
       - href: index.ipynb
         text: Home
-      - about.qmd
+      - href: Future
+        text: future.ipynb
       - href: https://www.sciencebase.gov/catalog//file/get/61a6952fd34eb622f6978d9f?f=__disk__16%2F0e%2Feb%2F160eeb81e88e58e9f73ace68371fcf8b48e4b725
         text: Dataset
       - href: https://github.com/emdapkus/scholarship
