first plot works

--- a/website/_quarto.yml
+++ b/website/_quarto.yml
@@ -2,16 +2,16 @@ project:
   type: website
 
 website:
-  title: "Natural Bridges, Leave No Trace"
+  title: "Natural Bridges"
   navbar:
     left:
-      - href: index.ipynb
-        text: Home
-      - href: Future
-        text: future.ipynb
+      - href: future.ipynb
+        text: Leave No Trace
       - href: https://www.sciencebase.gov/catalog//file/get/61a6952fd34eb622f6978d9f?f=__disk__16%2F0e%2Feb%2F160eeb81e88e58e9f73ace68371fcf8b48e4b725
+        icon: download
         text: Dataset
       - href: https://github.com/emdapkus/scholarship
+        icon: github
         text: Code
 
 format:
